# arquivo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  env.example  gunicorn.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.mjs  tailwind.config.js  tsconfig.json
.devcontainer/: devcontainer.json  postinstall.sh
.github/: dependabot.yml
.github/workflows/: docker-image.yml
arquivo/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
arquivo/frontend_src/: darkMode.ts  forms.ts  main.css  main.ts
arquivo/management/commands/: import_old_db.py
arquivo/migrations/: 0001_initial.py  0002_documento_rename_tipodelancamento_tipodedocumento_and_more.py  0003_remove_documento_arquivo_delete_arquivo.py  0004_historico.py  0005_remove_documento_conteudo_remove_documento_criado_em_and_more.py  0006_cliente_atividade_cliente_bairro_cliente_cep_and_more.py  0007_historico_complemento.py  0008_alter_cliente_options_alter_documento_options_and_more.py  0009_alter_documento_numero_caixa.py  0010_auto_20250325_2131.py  0011_alter_documento_numero_caixa.py
arquivo/models/: __init__.py  arquivo.py  caixa.py  cliente.py  documento.py  historico.py  tipo_de_documento.py
arquivo/static/arquivo/: style.css
arquivo/templates/arquivo/: base.html  index.html
arquivo/templates/arquivo/arquivo/: listar.html  novo.html
arquivo/templates/arquivo/caixa/: listar.html
arquivo/templates/arquivo/cliente/: detalhe.html  detalhe_partial.html  listar.html  novo.html
arquivo/templates/arquivo/componentes/: anchor_button.html  button.html  details.html  form.html  form_field.html  form_logout.html  menu.html  pagination.html
arquivo/templates/arquivo/components/: anchor_button.html  button.html  details.html  form.html  nav_link.html  pagination.html
arquivo/templates/arquivo/documento/: detalhe.html  imprimir_lista.html  listar.html  listar_partial.html  novo.html
arquivo/templates/arquivo/main/: consulta.html  index.html
arquivo/templates/registration/: login.html
arquivo/templatetags/: componentes.py
arquivo/views/: arquivo.py  caixa.py  cliente.py  documento.py  main.py  utils.py
config/: settings.py  urls.py
