[tool.poetry]
authors = ["Carlos Augusto Monoo Pereira Barbosa <augustomonoo@gmail.com>"]
description = ""
name = "arquivo"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^5.0.7"
django-widget-tweaks = "^1.5.0"
python = "^3.12"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.0.3"
black = "^24.4.2"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
django-livereload-server = "^0.5.1"
djlint = "^1.34.1"
django-stubs = "^5.0.2"

[tool.djlint]
blank_line_after_tag = "load,extends"
ignore = "H017"
profile = "django"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
plugins = ["mypy_django_plugins.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
