[tool.poetry]
authors = ["Carlos Augusto Monoo Pereira Barbosa <augustomonoo@gmail.com>"]
description = ""
name = "arquivo"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^5.1.7"
django-widget-tweaks = "^1.5.0"
python = "^3.12"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.1.3"
black = "^25.1.0"
django-debug-toolbar = "^5.0.1"
django-extensions = "^3.2.3"
django-livereload-server = "^0.5.1"
djlint = "^1.36.4"
django-stubs = "^5.2.0"

[tool.djlint]
blank_line_after_tag = "load,extends"
ignore = "H017"
profile = "django"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
plugins = ["mypy_django_plugins.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
